scrollbar and bugfix

--- a/style_not_min.css
+++ b/style_not_min.css
@@ -320,6 +320,44 @@ body {
 }
 
 /*
+ * Custom Scrollbar
+ */
+.c-scroll {
+    position: absolute;
+    background: rgba(198, 198, 198, 0.7);
+    width: 7px;
+    border-radius: 4px;
+    right: 0;
+    top: 0;
+    z-index: 22;
+    cursor: -webkit-grab;
+    cursor: -moz-grab;
+    cursor: grab;
+    opacity: 0;
+    transition: opacity 0.25s linear;
+}
+
+.c-scroll-hidden {
+    display: none;
+}
+
+.c-scroll-visible {
+    opacity: 1;
+}
+
+.c-scroll-grabbed {
+    cursor: -webkit-grabbing;
+    cursor: -moz-grabbing;
+    cursor: grabbing;
+    -o-user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    scroll-behavior: auto;
+}
+
+/*
  * Scroll Indicator
  */
 .scroll_indicator_box {
@@ -1318,7 +1356,7 @@ nav .start-pub, a:nth-child(4):hover~#marker {
 
 }
 
-@media screen and (max-height: 530px) {
+@media screen and (max-height: 595px) {
     
     .trans_box {
         margin: 0 10% 0 10%;
@@ -1467,10 +1505,6 @@ nav .start-pub, a:nth-child(4):hover~#marker {
 
 
 @media screen and (max-width: 730px) and (min-width: 670px) and (orientation: landscape) {
-    
-    #hobby_part {
-        display: block;
-    }
 
     .trans_box {
         margin: 0 15% 0 15%;
